bindings/go/marketdata/marketdata_uniffi.h

uint16_t uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_error(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_reconnecting(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_reconnect_failed(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_constructor_websocketclient_new(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_constructor_websocketclient_new_with_config(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_constructor_websocketclient_new_with_endpoint(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_constructor_websocketclient_new_with_full_config(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_constructor_websocketclient_new_with_url(void
    
);
uint32_t ffi_marketdata_uniffi_uniffi_contract_version(void
    
);