bindings/csharp/MarketdataUniffi/marketdata_uniffi.cs


    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_error();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_reconnecting();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_reconnect_failed();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_constructor_websocketclient_new();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_constructor_websocketclient_new_with_config();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_constructor_websocketclient_new_with_endpoint();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_constructor_websocketclient_new_with_full_config();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_constructor_websocketclient_new_with_url();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern uint ffi_marketdata_uniffi_uniffi_contract_version();

    static void uniffiCheckContractApiVersion()
    {
        var scaffolding_contract_version =
            _UniFFILib.ffi_marketdata_uniffi_uniffi_contract_version();
        if (29 != scaffolding_contract_version)
        {
            throw new UniffiContractVersionException(
                $"uniffi.marketdata_uniffi: uniffi bindings expected version `29`, library returned `{scaffolding_contract_version}`"
            );
        }
    }
